--- a/lsp/java/src/main/res/values/strings.xml
+++ b/lsp/java/src/main/res/values/strings.xml
@@ -42,9 +42,12 @@
     <string name="action_goto_definition">Go to definition</string>
     <string name="action_find_references">Find references</string>
     <string name="action_generate_toString">Generate toString()</string>
+    <string name="action_remove_unused_imports">Remove unused imports</string>
+    <string name="action_import_ordrerer">Import Orderer</string>
     <string name="msg_cannot_generate_toString">Unable to generate toString() implementation</string>
     <string name="msg_toString_overridden">toString() is already overridden</string>
     <string name="action_generate_missing_constructor">Generate missing constructor</string>
     <string name="msg_cannot_generate_constructor">Unable to generate constructor</string>
     <string name="msg_constructor_available">A constructor with same parameter types is already available</string>
 </resources>
+
