--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -204,6 +204,7 @@
     <string name="restype_other">Other</string>
     <string name="classtype_class">Class</string>
     <string name="classtype_activity">Activity</string>
+    <string name="classtype_fragment">Fragment</string>
     <string name="classtype_interface">Interface</string>
     <string name="classtype_enum">Enum</string>
     <string name="msg_checking_storage_permissions">Checking storage permissions</string>
@@ -354,6 +355,7 @@
     <string name="msg_editor_find_regex">Regex</string>
     <string name="msg_replacing">Replacing...</string>
 </resources>
+
 
 
 
