Toast error message if project is not initialized while creating find in project dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -363,6 +363,7 @@
     <string name="msg_gradle_service_notification">AndroidIDE\'s Gradle build service is running in the background.</string>
 
     <string name="title_cancel_build">Cancel build</string>
+    <string name="msg_project_not_initialized">Project is not initialized</string>
 </resources>
 
 
