Update AGP version; Do not use cached completions if the cached result is incomplete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -368,6 +368,7 @@
     <string name="msg_project_initialization_failed">Project initialization failed</string>
     <string name="msg_project_not_initialized">Project is not initialized</string>
     <string name="msg_running_task">Running task: \'%1$s\'</string>
+    <string name="msg_replacement">Replacement</string>
 </resources>
 
 
