Added option to manually sync project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -369,6 +369,7 @@
     <string name="msg_project_not_initialized">Project is not initialized</string>
     <string name="msg_running_task">Running task: \'%1$s\'</string>
     <string name="msg_replacement">Replacement</string>
+    <string name="title_sync_project">Sync project</string>
 </resources>
 
 
