--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -24,8 +24,8 @@
      <string name="msg_empty_view">Não tenho nada para te mostrar…</string>
      <string name="btn_terminal">Terminal</string>
      <string name="reset">Redefinir</string>
-     <string name="app_logs">Registros do aplicativo</string>
-     <string name="ide_logs">Registros da IDE</string>
+     <string name="app_logs">Logs do aplicativo</string>
+     <string name="ide_logs">Logs da IDE</string>
      <string name="label_splash_image">Imagem inicial</string>
      <string name="get_started">Começar</string>
      <string name="nothing_here">Nada aqui…</string>
@@ -75,12 +75,12 @@
      <string name="build">Construir</string>
      <string name="build_debug">assembleDebug</string>
      <string name="build_output">Saída de compilação</string>
-     <string name="build_release">assembleRelease</string>
+     <string name="build_release">assembleRelease</string>y
      <string name="lint_tasks">Construções Lint</string>
      <string name="clean_amp_build">Limpar e construir</string>
      <string name="clean_project">Limpar</string>
      <string name="create_aab">Criar AAB</string>
-     <string name="build_tasks">Tipos de construções</string>
+     <string name="build_tasks">Construções</string>
      <string name="stop_gradle_daemons">Parar daemons Gradle</string>
      <string name="quick_run_debug">Execução rápida</string>
      <string name="msg_sync_needed">Os arquivos Gradle foram alterados.  Por favor, reconstrua seu projeto para sincronizar dependências e configurações.</string>
@@ -97,7 +97,7 @@
      <string name="msg_starting_completion">Iniciando serviços</string>
      <string name="msg_starting_daemon">Iniciando um daemon Gradle</string>
      <string name="title_install_apks">Instalar APK(s)</string>
-     <string name="title_clear_output">Limpar registros</string>
+     <string name="title_clear_output">Limpar Logs</string>
      <string name="install">Instalar</string>
      <string name="run">Executar</string>
      <string name="gradle">Gradle</string>
@@ -119,7 +119,7 @@
      <string name="msg_confirm_open_project">Você quer que eu abra o último projeto aberto?  O projeto aberto foi:\n%s</string>
      <string name="msg_init_project_failed">Falha ao inicializar o projeto!</string>
      <string name="group_project">Projeto</string>
-     <string name="title_close_project">Fechar este projeto</string>
+     <string name="title_close_project">Fechar projeto</string>
      <string name="msg_opened_project_does_not_exist">O último projeto aberto não existe!</string>
      <string name="msg_create_new_project">Criar novo projeto</string>
      <string name="msg_open_existing_project">Abrir projeto existente</string>
@@ -142,20 +142,22 @@
      <string name="template_description_kotlin_basic">Projeto Kotlin com Appcompat Toolbar e um botão de ação flutuante</string>
      <string name="template_libgdx">Jogo LibGDX</string>
      <string name="template_description_libgdx">Projeto de jogo LibGDX configurado para renderizar uma imagem como exemplo.</string>
+    <string name="template_compose">Jetpack Compose</string>
+    <string name="template_description_compose">Projeto básico do Jetpack Compose (hello world)</string>
 
     <!-- Files -->
      <string name="save">Salvar</string>
-     <string name="menu_find">Pesquisar</string>
-     <string name="menu_find_file">Pesquisar no arquivo</string>
-     <string name="menu_find_project">Pesquisar no projeto</string>
-     <string name="msg_search_modules">Pesquisar em módulos</string>
+     <string name="menu_find">Buscar</string>
+     <string name="menu_find_file">Buscar no arquivo</string>
+     <string name="menu_find_project">Buscar no projeto</string>
+     <string name="msg_search_modules">Buscar em módulos</string>
      <string name="msg_no_modules">Nenhum módulo encontrado no projeto</string>
      <string name="hint_find_project_filter">Filtrar extensões de arquivo (opcional)</string>
      <string name="msg_find_project_filter">Separado por \'|\'</string>
      <string name="msg_empty_search_query">Por favor, digite o texto</string>
-     <string name="msg_select_search_modules">Selecione os módulos para Pesquisar</string>
+     <string name="msg_select_search_modules">Selecione os módulos para Buscar</string>
      <string name="msg_searching_project">Encontrando no projeto, aguarde…</string>
-     <string name="view_search_results">Resultados de pesquisa</string>
+     <string name="view_search_results">Resultados da busca</string>
      <string name="copying_files">Copiando arquivos</string>
      <string name="writing_files">Gravando arquivos</string>
      <string name="copying_assets">Copiando recursos</string>
@@ -173,13 +175,13 @@
      <string name="msg_file_exists">O arquivo já existe!</string>
      <string name="msg_invalid_name">Nome inválido!</string>
      <string name="text_create">Criar</string>
-     <string name="msg_can_contain_slashes">Se o nome tiver um separador de arquivos "/", são criados diretórios se ele contiver algo depois dele.</string>
+     <string name="msg_can_contain_slashes">Se o nome tiver um separador de arquivo "/", diretórios serão criados se contiver algo depois dele.</string>
      <string name="folder_name">Nome da pasta</string>
      <string name="file_name">Nome do arquivo</string>
      <string name="new_name">Novo nome</string>
      <string name="new_file">Novo arquivo</string>
      <string name="new_java_class">Nova classe Java</string>
-     <string name="new_xml_resource">Novo recurso XML</string>
+     <string name="new_xml_resource">Novo arquivo de recurso XML</string>
      <string name="new_folder">Nova pasta</string>
      <string name="title_confirm_delete">Confirmar exclusão</string>
      <string name="msg_confirm_delete">Tem certeza de que deseja excluir:\n%s?</string>
@@ -215,7 +217,7 @@
      <string name="undo">Desfazer</string>
      <string name="redo">Refazer</string>
      <item name="copy" type="string" tools:override="true">Copiar</item>
-     <item name="text_to_search" type="string">Texto para Pesquisar</item>
+     <item name="text_to_search" type="string">Texto para Buscar</item>
 
     <!-- Preferences -->
      <string name="title_change_text_size">Tamanho da fonte do editor</string>
@@ -226,10 +228,10 @@
      <string name="idepref_build_customgradlecommands_summary">Escolha comandos adicionais que serão adicionados durante a execução de cada tarefa</string>
      <string name="idepref_editor_fontsize_title">Tamanho da fonte</string>
      <string name="idepref_editor_fontsize_summary">Tamanho da fonte do editor</string>
-     <string name="idepref_editor_paintingflags_title">Non-printable painting flags</string>
-     <string name="idepref_editor_paintingflags_summary">Escolha quais caracteres non-printable devem ser desenhados pelo editor.</string>
-     <string name="idepref_editor_drawhexcolors_title">Desenhar sequências de cores hexadecimais</string>
-     <string name="idepref_editor_drawhexcolors_summary">O editor deve desenhar uma string de cor hexadecimal?</string>
+     <string name="idepref_editor_paintingflags_title">Configurações de exibição de caracteres não imprimíveis</string>
+     <string name="idepref_editor_paintingflags_summary">Selecione quais caracteres não imprimíveis devem ser exibidos no editor</string>
+     <string name="idepref_editor_drawhexcolors_title">Exibição de cores hexadecimais</string>
+     <string name="idepref_editor_drawhexcolors_summary">O editor deve exibir as cores hexadecimais?</string>
      <string name="idepref_editor_title">Editor</string>
      <string name="idepref_build_title">Construção e execução</string>
      <string name="title_open_projects">Abrir último projeto</string>
@@ -247,9 +249,9 @@
      <string name="msg_editor_font_size">Por favor, escolha o tamanho da fonte padrão do editor:</string>
      <string name="msg_clear_cache">Isso excluirá o diretório de caches criado pelo Gradle.  Se você excluí-lo, a próxima compilação pode demorar um pouco mais do que o normal, pois o Gradle fará o download dos arquivos necessários novamente.\nIMPORTANTE: Isso também excluirá o AAPT2.  Você precisará reinstalá-lo, caso contrário, ocorrerá uma falha de compilação.\n\nTem certeza de que deseja excluir os caches?</string>
      <string name="idepref_editor_word_wrap_title">Quebra de linha</string>
-     <string name="idepref_editor_word_wrap_summary">Usar quebras de linha no editor</string>
+     <string name="idepref_editor_word_wrap_summary">Usar quebra de linha no editor</string>
      <string name="idepref_editor_use_magnifier_title">Ativar lupa</string>
-     <string name="idepref_editor_use_magnifier_summary">Zoom de texto na posição do cursor ao selecionar texto no editor</string>
+     <string name="idepref_editor_use_magnifier_summary">Zoom de texto na posição do cursor ao selecionar qualquer texto no editor</string>
 
     <!-- Error Messages used while Logging -->
      <string name="err_installation">Erro de instalação</string>
@@ -333,7 +335,7 @@
      <string name="msg_use_horizontal_popup">Faça com que as ações de texto flutuante apareçam horizontalmente (reinicialização necessária se alterada).</string>
      <string name="msg_apk_install_intent_failed">Não foi possível iniciar a intenção de instalação do APK</string>
      <string name="msg_viewaction_add_attr">Adicionar atributo</string>
-     <string name="msg_search_attrs">Pesquisar atributos…</string>
+     <string name="msg_search_attrs">Buscar atributos…</string>
      <string name="msg_attr_added">O atributo foi adicionado com sucesso</string>
      <string name="msg_attr_not_updated">Não foi possível atualizar este atributo</string>
      <string name="hint_dimension_val">Valor da dimensão</string>
@@ -347,13 +349,26 @@
      <string name="hint_resource_reference">Qualquer referência de resource</string>
      <string name="msg_code_actions">Ações</string>
      <string name="title_format_code">Formatar código</string>
-     <string name="idepref_java_useGoogleStyle_title">Use a formatação de código no estilo Java do Google</string>
+     <string name="idepref_java_useGoogleStyle_title">Use a formatação de código Java Style do Google</string>
      <string name="idepref_java_useGoogleStyle_summary">Use a configuração de formatação de código Java Style do Google para formatar o código fonte Java.</string>
-     <string name="idepref_visiblePassword_title">Dica de senha</string>
-     <string name="idepref_visiblePassword_summary">Quando ativado, nenhuma dica de senha será mostrada pelo teclado.</string>
+     <string name="idepref_visiblePassword_title">Sugestões</string>
+     <string name="idepref_visiblePassword_summary">Quando ativado, nenhuma sugestão será exibida pelo teclado./string>
      <string name="msg_no_actions">Nenhuma ação de código encontrada</string>   
      <string name="previous">Anterior</string>
      <string name="msg_editor_find_case_sensitive">Maiúsculas e minúsculas</string>
      <string name="msg_editor_find_regex">Expressão regular</string>
      <string name="msg_replacing">Substituindo...</string>
+     
+    <string name="title_gradle_service_notification_ticker">Serviço de construção Gradle iniciado</string>
+    <string name="title_gradle_service_notification">Serviço de compilação Gradle</string>
+    <string name="msg_gradle_service_notification">O serviço de construção Gradle do AndroidIDE está sendo executado em segundo plano.</string>
+
+    <string name="title_cancel_build">Cancelar construção</string>
+    <string name="msg_initializing_project">Iniciando projeto</string>
+    <string name="msg_project_initialized">Projeto iniciado</string>
+    <string name="msg_project_initialization_failed">Falha na inicialização do projeto</string>
+    <string name="msg_project_not_initialized">O projeto não foi iniciado</string>
+    <string name="msg_running_task">Tarefa em execução: \'%1$s\'</string>
+    <string name="msg_replacement">Substituição</string>
+    <string name="title_sync_project">Sincronizar projeto</string>
 </resources>
