Rewrited project creator window

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -372,10 +372,13 @@
     <string name="msg_running_task">Running task: \'%1$s\'</string>
     <string name="msg_replacement">Replacement</string>
     <string name="title_sync_project">Sync project</string>
+    
+    <string name="wizard_error_name_empty">Name cannot be empty.</string>
+    <string name="wizard_error_name_illegal">Name cannot contain illegal characters</string>
+    <string name="wizard_save_location">Save location</string>
+    <string name="wizard_language">Project Language</string>
+    <string name="wizard_loading">Templates loading...</string>
+    <string name="next">Next</string>
+    <string name="exit">Exit</string>
+    
 </resources>
-
-
-
-
-
-
