--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="msg_chmod_exec">Setting executable permissions…</string>
     <string name="msg_linking">Linking %1$s to %2$s</string>
     <string name="msg_extracting_hooks">Extracting hook libraries…</string>
+    <string name="msg_empty_package">Package name is empty</string>
+    <string name="msg_package_is_not_valid">Package name is not a valid</string>
+    <string name="msg_package_is_to_long">Package name is to long</string>
+    <string name="msg_package_not_valid_char_1">The character \'_\' cannot be the first character in a package segment</string>
+    <string name="msg_package_not_use_digit_first">A digit cannot be the first character in a package segment</string>
+    <string name="msg_package_not_valid_char_2">The character "%1$s" is not allowed in Android application package names</string>
+    <string name="msg_package_mus_have_dot">The package must have at least one \'.\' separator</string>
+    
 </resources>
