--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -383,4 +383,8 @@
     
     <string name="idepref_title_tpFix">JDK 11 tag pointers fix</string>
     <string name="idepref_msg_tpFix">Set LD_PRELOAD to libhook.so to fix tag pointers issue for JDK 11 in Android 11 [DEPRECATED - Prefer using JDK 17].</string>
+    <string name="idepref_title_customGradleInstallation">Custom Gradle installation</string>
+    <string name="idepref_msg_customGradleInstallation">Specify a custom Gradle installation to use for build. This OVERRIDES the version specified in gradle-wrapper.properties.</string>
+    <string name="msg_gradle_installation_path">Gradle installation path</string>
+    <string name="msg_gradle_installation_input_help">Leave empty to use Gradle wrapper.</string>
 </resources>
