--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -380,6 +380,7 @@
     <string name="wizard_loading">Templates loading...</string>
     <string name="next">Next</string>
     <string name="exit">Exit</string>
+    <string name="hint_log_tag_filter">Log tags filter</string>
     
     <string name="idepref_title_tpFix">JDK 11 tag pointers fix</string>
     <string name="idepref_msg_tpFix">Set LD_PRELOAD to libhook.so to fix tag pointers issue for JDK 11 in Android 11 [DEPRECATED - Prefer using JDK 17].</string>
