--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,7 +2,7 @@
 
     <!-- AndroidIDE -->
     <string name="app_name">AndroidIDE</string>
-    <string name="license_jdk">AndroidIDE использует модифицированную версию JDK, которая лицензирована согласно GNU General Public License v2.0. Исходный код JDK и лицензия доступны здесь:</string>
+    <string name="license_jdk">AndroidIDE использует модифицированную версию JDK, которая лицензирована согласно GNU General Public License v2.0. Исходный код JDK и лицензия доступны здесь: </string>
     <string name="title_developers">Разработчики</string>
     <string name="msg_developers">\u2022 Akash Yadav\n\u2022 Marvin Stelter</string>
     <string name="title_open_source_licenses">Лицензирование открытого кода</string>
@@ -80,8 +80,8 @@
     <string name="build_output">Результат сборки</string>
     <string name="build_release">assembleRelease</string>
     <string name="lint_tasks">Сценарии Lint</string>
-    <string name="clean_amp_build">Зачистить и Собрать</string>
-    <string name="clean_project">Зачистка проекта</string>
+    <string name="clean_amp_build">Очистить и собрать</string>
+    <string name="clean_project">Очистить проект</string>
     <string name="create_aab">Создать AAB</string>
     <string name="build_tasks">Сценарии сборки</string>
     <string name="stop_gradle_daemons">Остановить Daemon\'ы Gradle</string>
@@ -111,8 +111,8 @@
 
     <!-- Project -->
     <string name="create_project">Создать проект</string>
-    <string name="minimum_sdk">Минимальное SDK</string>
-    <string name="target_sdk">Целевое SDK</string>
+    <string name="minimum_sdk">Минимальный SDK</string>
+    <string name="target_sdk">Целевой SDK</string>
     <string name="new_project">Новый проект</string>
     <string name="package_name">Имя пакета</string>
     <string name="project_app_name">Имя приложения</string>
@@ -133,18 +133,18 @@
     <string name="msg_project_delete_failed">Не удалось удалить проект!</string>
     <string name="menu_project_info">Информация о проекте</string>
     <string name="header_module_info">Информация о модуле</string>
-    <string name="msg_module_count">Модули : %d</string>
-    <string name="msg_task_count">Сценарии : %d</string>
-    <string name="msg_dependency_count">Зависимости : %d</string>
-    <string name="msg_package_name">Пакет : %s</string>
-    <string name="msg_min_sdk">Минимальное SDK : %s</string>
-    <string name="msg_target_sdk">Целевое SDK : %s</string>
+    <string name="msg_module_count">Модули: %d</string>
+    <string name="msg_task_count">Сценарии: %d</string>
+    <string name="msg_dependency_count">Зависимости: %d</string>
+    <string name="msg_package_name">Пакет: %s</string>
+    <string name="msg_min_sdk">Минимальный SDK: %s</string>
+    <string name="msg_target_sdk">Целевой SDK: %s</string>
     <string name="title_confirm_project_close">Закрыть проект</string>
     <string name="msg_confirm_project_close">Уверены, что хотите закрыть этот проект? Все запущенные Daemon\'ы Gradle будут остановлены после закрытия этого проекта.</string>
     <string name="project_exists">Проект с таким именем уже существует!</string>
 
     <!-- Templates -->
-    <string name="template_basic">Базовый Проект</string>
+    <string name="template_basic">Базовый проект</string>
     <string name="template_description_basic">Базовый проект, включающий в себя AppCompat Toolbar и Floating Action Button</string>
     <string name="template_description_empty">Пустой проект с верхней панелью. Подойдёт, если вы не хотите делать всю базовую рутину самостоятельно.</string>
     <string name="template_description_navigation_drawer">Проект с AppCompat Toolbar, DrawerLayout и NavigationView</string>
@@ -193,7 +193,7 @@
     <string name="new_file">Новый файл</string>
     <string name="new_java_class">Новый Java класс</string>
     <string name="new_xml_resource">Новый ресурс XML</string>
-    <string name="new_folder">Новая Папка</string>
+    <string name="new_folder">Новая папка</string>
     <string name="title_confirm_delete">Подтвердите удаление</string>
     <string name="msg_confirm_delete">Уверены, что хотите удалить:\n%s?</string>
     <string name="copied">Успешно скопировано!</string>
@@ -256,7 +256,7 @@
     <string name="idepref_editor_drawhexcolors_title">Отрисовывать HEX строки цветов</string>
     <string name="idepref_editor_drawhexcolors_summary">Должен ли редактор отрисовывать HEX строки цветов?</string>
     <string name="idepref_editor_title">Редактор</string>
-    <string name="idepref_build_title">Сборка и Запуск</string>
+    <string name="idepref_build_title">Сборка и запуск</string>
     <string name="title_open_projects">Открывать последний проект</string>
     <string name="msg_open_projects">Если включено, IDE будет запоминать последний открытый проект и открывать его при последующих запусках</string>
     <string name="title_confirm_project_open">Подтверждение открытия проекта</string>
@@ -269,7 +269,7 @@
     <string name="msg_preferences">Настройки</string>
     <string name="msg_failed_get_changelog">Не удалось получить список изменений!</string>
     <string name="pref_changelog">Список изменений</string>
-    <string name="msg_editor_font_size">Пожалуйста, выберите размер шрифта по умолчанию для редактора :</string>
+    <string name="msg_editor_font_size">Пожалуйста, выберите размер шрифта по умолчанию для редактора:</string>
     <string name="msg_clear_cache">Это удалит директорию кэша, созданную Gradle. Если вы удалите её, следующая сборка может занять больше времени, чем обычно, так как Gradle будет скачивать необходимые файлы снова.\nВАЖНО: Это также удалит AAPT2. Вам нужно будет переустановить его, иначе вы получите ошибку сборки.\n\nУверены, что хотите удалить кэш?</string>
 
     <!-- Error Messages used while Logging -->
@@ -339,7 +339,7 @@
     <string name="msg_code_generation_failed">Не удалось сгенерировать код XML. Уверены, что все равно хотите выйти?</string>
     <string name="msg_invalid_designer_result">Дизайнер интерфейсов возвратил недопустимое значение</string>
     <string name="msg_swipe_up">Провведите вверх, для просмотра сообщений сборки, логов и прочего.</string>
-    <string name="msg_ide_crashed">AndroidIDE приостановило работу из-за непридвиденной ошибки</string>
+    <string name="msg_ide_crashed">AndroidIDE приостановила работу из-за непридвиденной ошибки</string>
     <string name="msg_report_crash">Пожалуйста, создайте issue на нашем GitHub, прикрепив сообщение ниже :</string>
     <string name="msg_crash_report_hint">Нажмите на кнопку ниже, чтобы скопировать лог и открыть страницу создания issue.</string>
     <string name="msg_copy_report_action">Копировать и сообщить</string>
